--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "expo": "~45.0.0",
+    "expo-linear-gradient": "~11.3.0",
+    "expo-location": "~14.2.2",
+    "expo-permissions": "^13.2.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
